sandbox/output
GildedRoseTest.java:37: error: cannot find symbol
                GildedRose.generateUpdatedNormalItems());
                          ^
  symbol:   method generateUpdatedNormalItems()
  location: class GildedRose
GildedRoseTest.java:71: error: cannot find symbol
                GildedRose.generateUpdatedNormalItems());
                          ^
  symbol:   method generateUpdatedNormalItems()
  location: class GildedRose
2 errors
